force-app/main/default/objects/Order/fields/Access_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Access_Instructions__c</fullName>
    <label>Access Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>