force-app/main/default/objects/Order/fields/Additional_beverages_or_snacks__c.field-meta.xml
<CustomField>
    <fullName>Additional_beverages_or_snacks__c</fullName>
    <label>Additional beverages or snacks</label>
    <type>TextArea</type>
</CustomField>