force-app/main/default/objects/Order/fields/Beverages_Coffee_Type__c.field-meta.xml
<CustomField>
    <fullName>Beverages_Coffee_Type__c</fullName>
    <label>Beverages / Coffee Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee / Tea</fullName>
            </value>
            <value>
                <fullName>Hot Chocolate / Chai Latte</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Soft drinks</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>