force-app/main/default/objects/Order/fields/Branding_preference__c.field-meta.xml
<CustomField>
    <fullName>Branding_preference__c</fullName>
    <label>Branding preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>