force-app/main/default/objects/Order/fields/Cart_Area__c.field-meta.xml
<CustomField>
    <fullName>Cart_Area__c</fullName>
    <label>Cart Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>