force-app/main/default/objects/Order/fields/Coffee_cart_to_be_branded_or_customized__c.field-meta.xml
<CustomField>
    <fullName>Coffee_cart_to_be_branded_or_customized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coffee cart to be branded or customized?</label>
    <type>Checkbox</type>
</CustomField>