force-app/main/default/objects/Order/fields/Delivered_by__c.field-meta.xml
<CustomField>
    <fullName>Delivered_by__c</fullName>
    <label>Delivered by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>