force-app/main/default/objects/Order/fields/Do_you_have_a_budget__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_budget__c</fullName>
    <label>Do you have a budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No / Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>