force-app/main/default/objects/Order/fields/Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Budget__c</fullName>
    <description>Customer&apos;s budget estimate</description>
    <label>Estimated Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>