force-app/main/default/objects/Order/fields/Event_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Event_Outcome__c</fullName>
    <label>Event Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Completed</fullName>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>