force-app/main/default/objects/Order/fields/Event_Package__c.field-meta.xml
<CustomField>
    <fullName>Event_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Package</label>
    <referenceTo>Event_Package__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>