force-app/main/default/objects/Order/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <label>Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>