force-app/main/default/objects/Order/fields/Guest_arrival_time__c.field-meta.xml
<CustomField>
    <fullName>Guest_arrival_time__c</fullName>
    <label>Guest arrival time</label>
    <type>DateTime</type>
</CustomField>