force-app/main/default/objects/Order/fields/Guest_departure_time__c.field-meta.xml
<CustomField>
    <fullName>Guest_departure_time__c</fullName>
    <label>Guest departure time</label>
    <type>DateTime</type>
</CustomField>