force-app/main/default/objects/Order/fields/Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether invoice has been created in Xero</description>
    <label>Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>