force-app/main/default/objects/Order/fields/Mark_Staff_as_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Mark_Staff_as_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Staff as Confirmed</label>
    <type>Checkbox</type>
</CustomField>