force-app/main/default/objects/Order/fields/Menu_Details__c.field-meta.xml
<CustomField>
    <fullName>Menu_Details__c</fullName>
    <description>Finalized menu for the event</description>
    <label>Menu Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>