force-app/main/default/objects/Order/fields/Need_extra_services__c.field-meta.xml
<CustomField>
    <fullName>Need_extra_services__c</fullName>
    <label>Need extra services?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catering Options</fullName>
            </value>
            <value>
                <fullName>Cocktail package</fullName>
            </value>
            <value>
                <fullName>Coffee cart package</fullName>
            </value>
            <value>
                <fullName>Equipment Hire</fullName>
            </value>
            <value>
                <fullName>Glassware Hire</fullName>
            </value>
            <value>
                <fullName>Staff Only</fullName>
            </value>
            <value>
                <fullName>Wine Package</fullName>
            </value>
            <value>
                <fullName>mobile bar</fullName>
            </value>
            <value>
                <fullName>ice</fullName>
            </value>
            <value>
                <fullName>eau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>