force-app/main/default/objects/Order/fields/Order_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Amount__c</fullName>
    <label>Order Total Amount</label>
    <summarizedField>Order_Line_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Booking_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>