force-app/main/default/objects/Order/fields/Picked_up_by__c.field-meta.xml
<CustomField>
    <fullName>Picked_up_by__c</fullName>
    <label>Picked up by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>