force-app/main/default/objects/Order/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <label>Reason for Change</label>
    <type>TextArea</type>
</CustomField>