force-app/main/default/objects/Order/fields/Setup_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Setup_Breakdown__c</fullName>
    <label>Setup Breakdown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>