force-app/main/default/objects/Order/fields/Signage_requirement__c.field-meta.xml
<CustomField>
    <fullName>Signage_requirement__c</fullName>
    <label>Signage requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>