force-app/main/default/objects/Order/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <label>Special Requests</label>
    <type>TextArea</type>
</CustomField>