force-app/main/default/objects/Order/fields/Speciality_Items__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Items__c</fullName>
    <label>Speciality Items</label>
    <type>TextArea</type>
</CustomField>