force-app/main/default/objects/Order/fields/Staff_Allocation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Staff_Allocation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All staff allocated and confirmed</description>
    <label>Staff Allocation Complete</label>
    <type>Checkbox</type>
</CustomField>