force-app/main/default/objects/Order/fields/Staff_count__c.field-meta.xml
<CustomField>
    <fullName>Staff_count__c</fullName>
    <label>Staff count</label>
    <summaryForeignKey>Booking_Staff_Assignment__c.Booking_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>