force-app/main/default/objects/Order/fields/Staff_Names__c.field-meta.xml
<CustomField>
    <fullName>Staff_Names__c</fullName>
    <label>Staff Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>