force-app/main/default/objects/Order/fields/Staff_Summary__c.field-meta.xml
<CustomField>
    <fullName>Staff_Summary__c</fullName>
    <description>Summary of allocated staff</description>
    <label>Staff Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>