force-app/main/default/objects/Order/fields/Types_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Staff__c</fullName>
    <label>Types of Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>