force-app/main/default/objects/Order/fields/Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address__c</fullName>
    <label>Venue Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>