force-app/main/default/objects/Order/fields/Xero_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Xero Invoice</label>
    <referenceTo>Xero_Invoice__c</referenceTo>
    <relationshipLabel>Booking Orders</relationshipLabel>
    <relationshipName>Booking_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>