force-app/main/default/objects/Order/fields/Xero_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_Link__c</fullName>
    <formula>HYPERLINK(
    Xero_Invoice__r.Xero_URL__c,
    Xero_Invoice__r.Xero_Invoice_Number__c ,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xero Invoice Link</label>
    <type>Text</type>
</CustomField>