force-app/main/default/objects/Order/fields/Xero_Invoice_SF__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_SF__c</fullName>
    <formula>HYPERLINK(
    &apos;/&apos; &amp; Xero_Invoice__c,
    Xero_Invoice__r.Xero_Invoice_Number__c,
    &apos;_blank&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xero Invoice SF</label>
    <type>Text</type>
</CustomField>