force-app/main/default/objects/Order/recordTypes/Catering.recordType-meta.xml
<RecordType>
    <fullName>Catering</fullName>
    <active>true</active>
    <label>Catering</label>
</RecordType>