force-app/main/default/objects/Order/recordTypes/Sydney_Bookings.recordType-meta.xml
<RecordType>
    <fullName>Sydney_Bookings</fullName>
    <active>true</active>
    <label>Sydney Bookings</label>
</RecordType>