force-app/main/default/objects/Order/validationRules/Event_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_Validation</fullName>
    <active>true</active>
    <description>Making sure Event Date if Future Date.</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Event_Date_Validation),
    NOT(Event_Date__c &gt; TODAY())
)</errorConditionFormula>
    <errorMessage>Event Date Should Be Future Date.</errorMessage>
</ValidationRule>