force-app/main/default/objects/Order/validationRules/Prevent_staff_booked_status_change_manua.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_staff_booked_status_change_manua</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status , &quot;Staff Booked&quot;),

    /* Block ONLY when user changes it manually */
    ISCHANGED(Status ),

    /* Allow Admins */
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;

  
)</errorConditionFormula>
    <errorMessage>Please add staff to move to &apos;Staff Booked&apos;</errorMessage>
</ValidationRule>