force-app/main/default/objects/Order/validationRules/Staff_not_booked_for_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_not_booked_for_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status , &quot;Staff Booked&quot;),
     Staff_count__c = 0,  NOT(Bypass_Validation__c)
)</errorConditionFormula>
    <errorMessage>Please book staff to change the status to &apos;Staff Booked&apos;</errorMessage>
</ValidationRule>