force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Order_Total_Amount__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Record_Type__c</columns>
    <columns>Occasion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Test Account for Portal</value>
    </filters>
    <label>All Orders</label>
</ListView>